--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/paragraphs/_paragraphs.scss
@@ -820,6 +820,10 @@
     }
   }
 
+  .embedded-entity img {
+    padding: 0;
+  }
+
   article.featured-highlights-block a {
     .inner-wrapper:hover {
       background-color: $white;
