--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_colors.scss
@@ -10,8 +10,9 @@ $blue-light: #00aeef; // PMS Process Cyan C
 $blue-medium: #0089d0;
 $blue-dark: #0060af;
 $blue-darker: #005cab;
+$blue-dark2: #0d63ad;
 
-// Green.
+  // Green.
 $green-light: #20bdbe;
 $green-medium: #01a490;
 $green-dark: #006b6b;
