--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -301,6 +301,14 @@ p.button {
   display: inline-block;
   border-radius: 4px;
 }
+.button.blue:hover {
+  background-color: $blue-dark2 !important;
+}
+
+.button.purple:hover {
+  background-color: $dark-purple;
+}
+
 .button a, a.button {
   display: inline-block;
   margin-bottom: 0;
