--- a/themes/openy_themes/openy_lily/css/style.css
+++ b/themes/openy_themes/openy_lily/css/style.css
@@ -2974,6 +2974,22 @@ body {
 .branch-header .desktop a {
   color: #fff;
 }
+.branch-header .desktop .branch-hours-wrapper {
+  width: 100%;
+  margin: 0;
+  border: none;
+}
+.branch-header .desktop .branch-hours-wrapper ul.branch-hours {
+  word-wrap: break-word;
+  white-space: initial;
+  list-style: none;
+}
+.branch-header .desktop .branch-hours-wrapper ul.branch-hours > li {
+  padding-bottom: 15px;
+}
+.branch-header .desktop .branch-hours-wrapper ul.branch-hours > li:last-child {
+  padding-bottom: 0;
+}
 .branch-header .desktop .today-hours .today {
   margin-right: 10px;
 }
@@ -2986,12 +3002,6 @@ body {
   width: 240px;
   left: -15px;
   z-index: 1;
-}
-.branch-header .desktop .today-hours .branch-hours td {
-  padding: 0 10px 5px 0;
-}
-.branch-header .desktop .today-hours .branch-hours td:first-child {
-  white-space: nowrap;
 }
 .branch-header .desktop .today-hours .dropdown-toggle {
   font-family: "Cachet", Verdana, Geneva, sans-serif;
@@ -3258,6 +3268,16 @@ body {
 
 .branch-content {
   margin-top: 40px;
+}
+
+.node--type-branch .field-branch-hours td,
+.node--type-branch .branch-hours td {
+  padding: 0 0 5px 0;
+}
+.node--type-branch .field-branch-hours td:first-child,
+.node--type-branch .branch-hours td:first-child {
+  white-space: nowrap;
+  padding-right: 5px;
 }
 
 html.js .branch__updates_queue__button {
