Fix left padding in sidebar

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/css/style.css
@@ -15732,6 +15732,9 @@ section.content {
   padding-bottom: 5px;
   padding-left: 35px;
 }
+.paragraph--type--sidebar-menu .dropdown.open .dropdown .dropdown li a {
+  padding-left: 45px;
+}
 .paragraph--type--sidebar-menu .dropdown.open > .nav,
 .paragraph--type--sidebar-menu .dropdown.open .nav .open .nav {
   display: block;
