--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/legacy/_legacy.scss
@@ -265,6 +265,10 @@ section.content {
         padding-bottom: 5px;
         padding-left: 35px;
       }
+
+      .dropdown .dropdown li a {
+        padding-left: 45px;
+      }
       > .nav,
       .nav .open .nav {
         display: block;
