--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -1980,14 +1980,6 @@ body {
     padding: 15px;
   }
 }
-.banner--small {
-  min-height: 105px;
-}
-@media (min-width: 62em) {
-  .banner--small {
-    min-height: 160px;
-  }
-}
 .banner--small .banner-image {
   display: none;
 }
@@ -2009,11 +2001,11 @@ body {
 }
 @media (min-width: 62em) {
   .banner--small .banner-cta-section {
-    padding: 30px 0;
+    padding: 36px 0;
   }
 }
 .banner--small .banner-title {
-  margin: 0 0 10px;
+  margin: 0;
   max-width: 700px;
 }
 
@@ -2566,8 +2558,7 @@ body {
 }
 @media (min-width: 48em) {
   .program-header .content {
-    height: 260px;
-    padding: 40px 0;
+    padding: 36px 0;
     margin-bottom: 45px;
   }
 }
@@ -2600,7 +2591,7 @@ body {
   color: #006b6b;
 }
 .program-header .image {
-  margin-top: -40px;
+  margin-top: -36px;
 }
 .program-header .main {
   position: static;
@@ -2635,7 +2626,7 @@ body {
 @media (min-width: 48em) {
   .program-header h1 {
     font-size: 50px;
-    margin-bottom: 80px;
+    margin-bottom: 0;
   }
 }
 .program-header.program-header-sub-category {
@@ -2647,7 +2638,7 @@ body {
 }
 @media (min-width: 48em) {
   .program-header.program-header-sub-category h1 {
-    margin: 0 0 45px;
+    margin: 0 0 36px;
   }
 }
 .program-header.program-header-sub-category .field-category-program {
@@ -2666,11 +2657,6 @@ body {
 .program-header.program-header-sub-category .content {
   height: auto;
   margin-bottom: 0;
-}
-@media (min-width: 48em) {
-  .program-header.program-header-sub-category .content {
-    min-height: 200px;
-  }
 }
 .program-header.program-header-sub-category .content .image {
   position: static;
