--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--banner.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--banner.html.twig
@@ -62,9 +62,11 @@
           <div class="banner-description">
             {{ content.field_prgf_description}}
           </div>
-          <div class="btn banner-btn ">
-            {{ content.field_prgf_link }}
-          </div>
+          {% if paragraph.field_prgf_link.0.uri %}
+            <div class="btn banner-btn ">
+              {{ content.field_prgf_link }}
+            </div>
+          {% endif %}
         </div>
       </div>
     </div>
