--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_fonts.scss
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/sass/global/_fonts.scss
@@ -59,7 +59,7 @@
 
 body {
   -webkit-font-smoothing: antialiased;
-  @include cachet();
+  @include verdana();
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
