--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -8884,7 +8884,7 @@ body.ancestor-camps .footer-themes-b .social-icon:hover {
 }
 
 body {
-  font-family: 'Cachet', Verdana,Arial,sans-serif;
+  font-family: Verdana,Arial,sans-serif;
 }
 
 .form-item {
