--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -1239,5 +1239,5 @@ body.ancestor-camps {
 }
 
 body {
-  font-family: 'Cachet', Verdana,Arial,sans-serif;
+  font-family: Verdana,Arial,sans-serif;
 }
