--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--gallery--default.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--gallery--default.html.twig
@@ -80,7 +80,7 @@ set classes = [
         <div class="cta-group">
           <h1>{{ content.field_prgf_headline }}</h1>
           <div class="text">{{ content.field_prgf_description }}</div>
-          {% if paragraph.field_prgf_link.0.uri %}
+          {% if content.field_prgf_link|render|trim is not empty %}
             <div class="btn btn-default btn-link blue">{{ content.field_prgf_link }}</div>
           {% endif %}
         </div>
