--- a/themes/openy_themes/openy_rose/templates/paragraph/paragraph--teaser--default.html.twig
+++ b/themes/openy_themes/openy_rose/templates/paragraph/paragraph--teaser--default.html.twig
@@ -50,7 +50,7 @@ set classes = [
   <div class="col-sm-7 content">
     {{ content.field_prgf_title }}
     {{ content.field_prgf_description }}
-    {% if paragraph.field_prgf_link.0.uri %}
+    {% if content.field_prgf_link|render|trim is not empty %}
       <a href="{{ content.field_prgf_link.0['#url'] }}" class="btn btn-link blue">{{ content.field_prgf_link.0['#title'] }}</a>
     {% endif %}
   </div>
