[#2955] Fix header.html

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/page/page--header.html.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/page/page--header.html.html.twig
@@ -81,6 +81,7 @@
             </div>
               {{ page.secondary_menu }}
           </div>
+        </nav>
 
           {% block primary_menu %}
             <div class="nav-wrapper">
