Fix search for Lily theme

--- a/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/include/sidebar-search-and-menu.html.twig
+++ b/docroot/profiles/contrib/openy/themes/openy_themes/openy_lily/templates/include/sidebar-search-and-menu.html.twig
@@ -8,7 +8,7 @@
   <form method="get" action="{{ base_path }}search_results">
     <div class="form-group col-xs-12">
       <div class="input-group">
-        <input type="text" name="search" class="form-control">
+        <input type="text" name="q" class="form-control">
         <span class="input-group-btn">
           <button class="btn btn-info" type="submit">{{ "SEARCH THE Y"|t }}</button>
         </span>
