--- a/themes/openy_themes/openy_carnation/scss/base/_typography.scss
+++ b/themes/openy_themes/openy_carnation/scss/base/_typography.scss
@@ -1,6 +1,6 @@
 body {
-  color: $default-grey;
   @include verdana();
+  color: $default-grey;
   font-size: 18px;
 }
 
@@ -41,7 +41,8 @@ h5 {
  letter-spacing: -0.5px;
 }
 
-h6, .h6 {
+h6,
+.h6 {
  font-size: 20px;
  font-weight: bold;
 }
@@ -57,8 +58,9 @@ figcaption {
 }
 
 a {
- text-decoration: none;
- &:hover {
-  text-decoration: none !important;
- }
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: none !important;
+  }
 }
